# japim

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
configs/: cpu-smoke.yaml  default.yaml  docker-gpu-highmem.yaml  docker-gpu.yaml  gpu-smoke.yaml  mock-e2e.yaml
deploy/systemd/: japim-docker.service  japim-podman.service
docs/: api.md  architecture.md  offline-release-guide.ko.md  redhat9-gpu-guide.ko.md  ubuntu-gpu-guide.ko.md
models/: README.md
samples/: README.md
samples/mock_ocr/: page_0001.json
scripts/: build_offline_image.ps1  export_release_parts.ps1  fetch_paddle_models.ps1  fetch_paddle_models.py  generate_sample_pdf.py  import_release_parts.ps1  import_release_parts.sh  run_rhel9_gpu.sh  run_ubuntu_gpu.sh  smoke_test_container.ps1  write_release_manifest.ps1
src/japim/: cli.py  pipeline.py
src/japim/api/: app.py
src/japim/audit/: logger.py
src/japim/common/: config.py  logging_utils.py  models.py  text.py
src/japim/masking/: bbox.py  masker.py
src/japim/ocr/: engine.py
src/japim/pdf/: assembler.py  loader.py  renderer.py
src/japim/postprocess/: line_builder.py
src/japim/preprocess/: image_preprocessor.py
src/japim/rules/: base.py  registry.py
src/japim/web/: index.html
tests/integration/: test_api_e2e.py
tests/unit/: test_api.py  test_bbox.py  test_line_builder.py  test_ocr_engine.py  test_rules.py
